# fco-actor

./: README.md  fco-actor.cabal  stack.yaml
app/: Main.hs
src/Control/Concurrent/: Actor.hs
src/Control/Concurrent/Actor/: Config.hs  Console.hs  Logging.hs  Util.hs
test/Control/Concurrent/: ActorSpec.hs
test/data/: config-fco.yaml
