name:                 fco-actor
version:              0.1.0.1
synopsis:             concurrent actors that communicate via mailboxes (typed channels)
description:          Please see README.md
homepage:             https://github.com/cyberconcepts/fco-actor
license:              MIT
license-file:         LICENSE
author:               team@functionalconcepts.org
maintainer:           helmutm@cy55.de
copyright:            2019 team@functionalconcepts.org
category:             Concurrent
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Control.Concurrent.Actor
                      Control.Concurrent.Actor.Config
                      Control.Concurrent.Actor.Console
  build-depends:      base >= 4.7 && < 5
                    , basic-prelude
                    , aeson
                    , containers
                    , directory
                    , extra
                    , stm
                    , text
                    , unordered-containers
                    , yaml
  default-language:   Haskell2010

executable fco-actor-demo
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , fco-actor
  default-language:   Haskell2010

test-suite fco-actor-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      Control.Concurrent.ActorSpec
  main-is:            Spec.hs
  build-depends:      base
                    , basic-prelude
                    , fco-actor
                    , hspec
                    , aeson
                    , unordered-containers
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cyberconcepts/fco-core
